# AutoChess

./: .gitignore  AI.cpp  AI.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoardState.cpp  ChessBoardState.h  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  main.cpp
resources/sprites/: source.txt
